--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -13,7 +13,8 @@
         <Button x:Name="btnCreateCrest" Content="Create" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20"
                 Click="btnCreateCrest_Click"/>
 
-        <TextBlock x:Name="txtResponse"  HorizontalAlignment="Center" VerticalAlignment="Bottom" FontSize="20"/>
+        <TextBlock x:Name="txtResponse"  HorizontalAlignment="Center" VerticalAlignment="Bottom" FontSize="20" MaxWidth="290"
+                   TextWrapping="Wrap" TextAlignment="Center"/>
 
 
 
